# gpiocdev-rs

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config  config.toml
LICENSES/: MIT.txt
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/examples/: gpiocdevd.sh
cli/src/: chip.rs  common.rs  detect.rs  edges.rs  find.rs  get.rs  info.rs  line.rs  main.rs  monitor.rs  notify.rs  platform.rs  set.rs  watch.rs
cli/src/common/: resolver.rs
cli/src/set/: editor.rs
daemon/: Cargo.toml
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/gpiocdev/: all.html  enum.AbiVersion.html  enum.Error.html  fn.detect_abi_version.html  fn.supports_abi_version.html  index.html  sidebar-items.js  struct.Timestamp.html  type.Result.html
docs/gpiocdev/chip/: enum.ErrorKind.html  fn.chips.html  fn.is_chip.html  index.html  sidebar-items.js  struct.Chip.html  struct.ChipIterator.html  struct.Info.html  struct.InfoChangeIterator.html
docs/gpiocdev/line/: enum.Bias.html  enum.Direction.html  enum.Drive.html  enum.EdgeDetection.html  enum.EdgeKind.html  enum.EventClock.html  enum.InfoChangeKind.html  enum.Value.html  index.html  sidebar-items.js  struct.Config.html  struct.EdgeEvent.html  struct.Info.html  struct.InfoChangeEvent.html  struct.Values.html  type.Offset.html  type.Offsets.html
docs/gpiocdev/request/: index.html  sidebar-items.js  struct.Builder.html  struct.Config.html  struct.EdgeEventBuffer.html  struct.Request.html
docs/gpiocdev_uapi/: all.html  constant.NAME_LEN_MAX.html  constant.NUM_LINES_MAX.html  enum.Error.html  fn.has_event.html  fn.read_event.html  fn.wait_event.html  index.html  sidebar-items.js  struct.Name.html  struct.ValidationError.html  type.Result.html
docs/gpiocdev_uapi/common/: constant.NAME_LEN_MAX.html  constant.NUM_LINES_MAX.html  enum.Error.html  enum.LineEdgeEventKind.html  enum.LineInfoChangeKind.html  fn.get_chip_info.html  fn.has_event.html  fn.read_event.html  fn.unwatch_line_info.html  fn.wait_event.html  struct.ChipInfo.html  struct.Name.html  struct.Offsets.html  struct.ValidationError.html  type.Offset.html  type.Result.html
docs/gpiocdev_uapi/v1/: enum.LineEdgeEventKind.html  enum.LineInfoChangeKind.html  fn.get_chip_info.html  fn.get_line_event.html  fn.get_line_handle.html  fn.get_line_info.html  fn.get_line_values.html  fn.set_line_config.html  fn.set_line_values.html  fn.unwatch_line_info.html  fn.watch_line_info.html  index.html  sidebar-items.js  struct.ChipInfo.html  struct.EventRequest.html  struct.EventRequestFlags.html  struct.HandleConfig.html  struct.HandleRequest.html  struct.HandleRequestFlags.html  struct.LineEdgeEvent.html  struct.LineInfo.html  struct.LineInfoChangeEvent.html  struct.LineInfoFlags.html  struct.LineValues.html  struct.Offsets.html  struct.ValidationError.html  type.Offset.html
docs/gpiocdev_uapi/v2/: constant.NUM_ATTRS_MAX.html  enum.LineAttributeKind.html  enum.LineAttributeValue.html  enum.LineEdgeEventKind.html  enum.LineInfoChangeKind.html  fn.get_chip_info.html  fn.get_line.html  fn.get_line_info.html  fn.get_line_values.html  fn.set_line_config.html  fn.set_line_values.html  fn.unwatch_line_info.html  fn.watch_line_info.html  index.html  sidebar-items.js  struct.ChipInfo.html  struct.LineAttribute.html  struct.LineAttributes.html  struct.LineConfig.html  (+12 more)
docs/gpiosim/: all.html  enum.Direction.html  enum.Error.html  enum.Level.html  fn.builder.html  fn.simpleton.html  fn.unique_name.html  index.html  sidebar-items.js  struct.Bank.html  struct.Builder.html  struct.Chip.html  struct.Hog.html  struct.Sim.html  struct.Simpleton.html  type.Offset.html  type.Result.html
embedded-hal/: CHANGELOG.md  Cargo.toml  README.md
embedded-hal/examples/: async_io_wait_for_edges.rs  async_std_wait_for_edges.rs  get_pin_value.rs  pulse_pin_value.rs  toggle_pin_value.rs  tokio_wait_for_edges.rs
embedded-hal/src/: async.rs  lib.rs
embedded-hal/src/async/: async_io.rs  tokio.rs
embedded-hal/tests/: input_pin.rs  output_pin.rs
gpiod/: Cargo.toml
gpiod/examples/: blinker.rs  get_many.rs  get_one.rs  set_many.rs  set_one.rs  watcher.rs
gpiod/src/: chip.rs  lib.rs  line.rs  request.rs
gpiodctl/: Cargo.toml
gpiodctl/src/: common.rs  detect.rs  find.rs  get.rs  info.rs  main.rs  monitor.rs  set.rs  watch.rs
gpiosim/: Cargo.toml  README.md  simclean.sh
gpiosim/src/: lib.rs
gpiosim/tests/: builder.rs  chip.rs  simpleton.rs
lib/: CHANGELOG.md  Cargo.toml  README.md
lib/benches/: event.rs  reconfigure.rs  request.rs  sim.rs  value.rs
lib/examples/: async_io_watch_line_value.rs  async_io_watcher.rs  async_std_watch_line_value.rs  async_std_watcher.rs  blinker.rs  find_line_by_name.rs  get_chip_info.rs  get_line_info.rs  get_line_value.rs  get_many.rs  get_multiple_line_values.rs  get_one.rs  pulse_line_value.rs  pulse_multiple_line_values.rs  set_many.rs  set_one.rs  softwire.rs  toggle_line_value.rs  toggle_multiple_line_values.rs  tokio_ticking_watch_line_value.rs  tokio_ticking_watcher.rs  tokio_watch_line_edges.rs  tokio_watch_line_value.rs  tokio_watcher.rs  watch_line_value.rs  watch_multiple_line_values.rs  watcher.rs
lib/src/: async.rs  async_io.rs  chip.rs  lib.rs  line.rs  request.rs  tokio.rs
lib/src/async/: async_io.rs  mod.rs  tokio.rs
lib/src/line/: config.rs  event.rs  info.rs  mod.rs  value.rs
lib/src/request/: builder.rs  config.rs  edge_event_buffer.rs  mod.rs
lib/tests/: .request.rs.rustfmt  async_io.rs  async_tokio.rs  chip.rs  lib.rs  request.rs
lib/tests/common/: mod.rs
uapi/: CHANGELOG.md  Cargo.toml  README.md
uapi/benches/: event.rs  reconfigure.rs  request.rs  value.rs
uapi/src/: common.rs  lib.rs  v1.rs  v2.rs
uapi/tests/: v1.rs  v2.rs
uapi/tests/common/: mod.rs
uapi/tests/v1/: get_chip_info.rs  get_line_event.rs  get_line_handle.rs  get_line_info.rs  get_line_values.rs  set_line_config.rs  set_line_values.rs  unwatch_line_info.rs  watch_line_info.rs
uapi/tests/v2/: get_chip_info.rs  get_line.rs  get_line_info.rs  get_line_values.rs  set_line_config.rs  set_line_values.rs  unwatch_line_info.rs  watch_line_info.rs
(+48 files in other folders)
