# SPDX-FileCopyrightText: 2022 Kent Gibson <warthog618@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
authors = ["Kent Gibson <warthog618@gmail.com>"]
categories = ["hardware-support", "command-line-utilities", "embedded", "os::linux-apis"]
description = "A tool to access GPIO lines on Linux using the GPIO character device"
edition = "2021"
keywords = ["linux", "gpio", "cli", "embedded"]
license = "Apache-2.0 OR MIT"
name = "gpiocdev-cli"
repository = "https://github.com/warthog618/gpiocdev-rs"
version = "0.3.0"

[[bin]]
name = "gpiocdev"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = {version = "4.0", features = ["derive", "env"]}
colored = "2.0"
daemonize = "0.4"
gpiocdev = {version = "0.3.0", path = "../lib", default-features = false}
libc = "0.2"
mio = {version = "0.8", features = ["os-ext"]}
nohash-hasher = "0.2"
rustyline = "10.0"
rustyline-derive = "0.7"
thiserror = "1.0"

[features]
default = ["uapi_v1", "uapi_v2"]
uapi_v1 = ["gpiocdev/uapi_v1"]
uapi_v2 = ["gpiocdev/uapi_v2"]
