# SPDX-FileCopyrightText: 2022 Kent Gibson <warthog618@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
authors = ["Kent Gibson <warthog618@gmail.com>"]
categories = ["hardware-support", "command-line-utilities", "embedded", "os::linux-apis"]
description = "A tool to access GPIO lines on Linux using the GPIO character device"
edition = "2021"
keywords = ["linux", "gpio", "gpiochip", "cli", "chardev"]
license = "Apache-2.0 OR MIT"
name = "gpiocdev-cli"
repository = "https://github.com/warthog618/gpiocdev-rs"
rust-version = "1.70"
version = "0.5.2"

[[bin]]
name = "gpiocdev"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = {version = "4", features = ["derive", "env", "cargo"]}
daemonize = "0.5"
gpiocdev = {version = "0.6", path = "../lib", default-features = false}
libc = "0.2"
mio = {version = "0.8", features = ["os-ext"]}
nohash-hasher = "0.2"
rustyline = "13.0.0"
rustyline-derive = "0.10.0"
serde = {version = "1.0", optional = true}
serde_derive = {version = "1.0", optional = true}
serde_json = {version = "1.0", optional = true}
thiserror = "1.0"

[features]
default = ["uapi_v1", "uapi_v2", "json"]
json = ["serde", "dep:serde_json"]
serde = ["dep:serde", "dep:serde_derive", "gpiocdev/serde"]
uapi_v1 = ["gpiocdev/uapi_v1"]
uapi_v2 = ["gpiocdev/uapi_v2"]
