# SPDX-FileCopyrightText: 2022 Kent Gibson <warthog618@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "gpiocdev-cli"
version = "0.6.0"
authors = ["Kent Gibson <warthog618@gmail.com>"]
edition = "2021"
rust-version = "1.88"
description = "Access GPIO lines from the Linux command line using the GPIO character device"
repository = "https://github.com/warthog618/gpiocdev-rs"
license = "Apache-2.0 OR MIT"
keywords = ["chardev", "cli", "gpio", "gpiochip", "linux"]
categories = [
  "command-line-utilities",
  "embedded",
  "hardware-support",
  "os::linux-apis",
]

[[bin]]
name = "gpiocdev"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4", features = ["cargo", "derive", "env"] }
daemonize = "0.5"
gpiocdev = { version = "0.8", default-features = false, path = "../lib" }
libc = "0.2"
mio = { version = "1", features = ["os-ext"] }
rustyline = "17"
rustyline-derive = "0.11"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"

[features]
default = ["json", "uapi_v1", "uapi_v2"]
json = ["dep:serde_json", "serde"]
serde = ["dep:serde", "dep:serde_derive", "gpiocdev/serde"]
uapi_v1 = ["gpiocdev/uapi_v1"]
uapi_v2 = ["gpiocdev/uapi_v2"]
