# SPDX-FileCopyrightText: 2024 Kent Gibson <warthog618@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "gpiocdev-embedded-hal"
version = "0.1.3"
authors = ["Kent Gibson <warthog618@gmail.com>"]
edition = "2021"
rust-version = "1.68"
description = "embedded-hal wrappers around gpiocdev Requests"
repository = "https://github.com/warthog618/gpiocdev-rs"
license = "Apache-2.0 OR MIT"
keywords = ["chardev", "embedded-hal", "gpio", "gpiochip", "linux"]
categories = ["api-bindings", "embedded", "hardware-support", "os::linux-apis"]

[package.metadata.docs.rs]
all-features = true
targets = []

[[example]]
name = "tokio_wait_for_edges"
required-features = ["async_tokio"]

[[example]]
name = "async_io_wait_for_edges"
required-features = ["async_io"]

[[example]]
name = "async_std_wait_for_edges"
required-features = ["async_io"]

[dependencies]
embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0", optional = true }
gpiocdev = { version = "0.8", default-features = false, path = "../lib" }
thiserror = "2.0"

[dev-dependencies]
anyhow = "1.0"
async-io = "2"
async-std = "1"
gpiosim = "0.4"
tokio = { version = "1", features = ["macros", "rt", "time"] }

[features]
async_io = ["embedded-hal-async", "gpiocdev/async_io"]
async_tokio = ["embedded-hal-async", "gpiocdev/async_tokio"]
default = ["uapi_v2"]
uapi_v1 = ["gpiocdev/uapi_v1"]
uapi_v2 = ["gpiocdev/uapi_v2"]
