[package]
authors = ["Kent Gibson <warthog618@gmail.com>"]
categories = ["hardware-support", "command-line-utilities", "embedded", "os::linux-apis"]
description = "A tool to access GPIO lines on Linux using the GPIO character device"
edition = "2021"
keywords = ["linux", "gpio", "cli", "embedded"]
license = "MIT"
name = "gpiodctl"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
gpiod = {path = "../gpiod", features = ["uapi_v1", "uapi_v2"]}
structopt = "0.3"
strum = {version = "0.23", features = ["derive"]}
thiserror = "1.0"
