# SPDX-FileCopyrightText: 2022 Kent Gibson <warthog618@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
authors = ["Kent Gibson <warthog618@gmail.com>"]
categories = ["embedded", "os::linux-apis", "development-tools::testing"]
description = "A library to drive gpio-sims for GPIO software testing"
edition = "2021"
keywords = ["linux", "gpio", "library", "embedded"]
license = "Apache-2.0 OR MIT"
name = "gpiosim"
repository = "https://github.com/warthog618/gpiocdev-rs"
version = "0.1.2"

[dependencies]
global_counter = "0.2"
nohash-hasher = "0.2"
thiserror = "1.0"

[dev-dependencies]
gpiocdev = {path = "../lib", features = ["uapi_v1", "uapi_v2"]}
