# SPDX-FileCopyrightText: 2022 Kent Gibson <warthog618@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
authors = ["Kent Gibson <warthog618@gmail.com>"]
categories = ["hardware-support", "api-bindings", "os::linux-apis", "embedded", "asynchronous"]
description = "A library to access GPIO lines on Linux using the GPIO character device"
edition = "2021"
keywords = ["linux", "gpio", "library", "embedded", "async"]
license = "Apache-2.0 OR MIT"
name = "gpiocdev"
repository = "https://github.com/warthog618/gpiocdev-rs"
rust-version = "1.60"
version = "0.4.3"

[dependencies]
async-io = {version = "1.9.0", optional = true}
bitmaps = "3.2"
chrono = "0.4"
errno = "0.3"
futures = {version = "0.3", optional = true}
gpiocdev-uapi = {version = "0.3", path = "../uapi", default-features = false}
human-sort = "0.2"
nohash-hasher = "0.2"
serde = {version = "1.0", optional = true}
serde_derive = {version = "1.0", optional = true}
thiserror = "1.0"
tokio = {version = "1.21", features = ["net"], optional = true}
tokio-stream = {version = "0.1.11", optional = true}

[dev-dependencies]
anyhow = "1.0"
async-std = "1.12"
gpiosim = "0.3"
tokio = {version = "1.21", features = ["macros", "rt", "time"]}

[features]
async-io = ["dep:async-io", "futures"]
tokio = ["tokio-stream", "tokio/net", "futures"]
default = ["uapi_v2"]
serde = ["dep:serde", "serde_derive"]
uapi_v1 = ["gpiocdev-uapi/uapi_v1"]
uapi_v2 = ["gpiocdev-uapi/uapi_v2"]

[[example]]
name = "tokio_watcher"
required-features = ["tokio"]

[[example]]
name = "tokio_ticking_watcher"
required-features = ["tokio"]

[[example]]
name = "async_io_watcher"
required-features = ["async-io"]

[[example]]
name = "async_std_watcher"
required-features = ["async-io"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "i686-unknown-linux-gnu"]
