# SPDX-FileCopyrightText: 2022 Kent Gibson <warthog618@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
authors = ["Kent Gibson <warthog618@gmail.com>"]
categories = ["hardware-support", "api-bindings", "os::linux-apis", "embedded", "asynchronous"]
description = "A library to access GPIO lines on Linux using the GPIO character device"
edition = "2021"
keywords = ["linux", "gpio", "gpiochip", "libgpiod", "chardev"]
license = "Apache-2.0 OR MIT"
name = "gpiocdev"
repository = "https://github.com/warthog618/gpiocdev-rs"
rust-version = "1.63"
version = "0.6.1"

[dependencies]
async-io = {version = "2.2", optional = true}
futures = {version = "0.3", optional = true}
gpiocdev-uapi = {version = "0.6", path = "../uapi", default-features = false}
nohash-hasher = "0.2"
serde = {version = "1.0", optional = true}
serde_derive = {version = "1.0", optional = true}
thiserror = "1.0"
tokio = {version = "1.21", features = ["net"], optional = true}
tokio-stream = {version = "0.1.11", optional = true}

[dev-dependencies]
anyhow = "1.0"
async-std = "1.12"
criterion = "0.5"
gpiosim = "0.3"
tokio = {version = "1.21", features = ["macros", "rt", "time"]}

[features]
async_io = ["dep:async-io", "dep:futures"]
async_tokio = ["dep:tokio-stream", "dep:tokio", "dep:futures"]
default = ["uapi_v2"]
serde = ["dep:serde", "dep:serde_derive"]
uapi_v1 = ["gpiocdev-uapi/uapi_v1"]
uapi_v2 = ["gpiocdev-uapi/uapi_v2"]

[[example]]
name = "tokio_watch_line_value"
required-features = ["async_tokio"]

[[example]]
name = "tokio_ticking_watch_line_value"
required-features = ["async_tokio"]

[[example]]
name = "async_io_watch_line_value"
required-features = ["async_io"]

[[example]]
name = "async_std_watch_line_value"
required-features = ["async_io"]

[package.metadata.docs.rs]
all-features = true
targets = []

[[bench]]
harness = false
name = "event"

[[bench]]
harness = false
name = "reconfigure"

[[bench]]
harness = false
name = "request"

[[bench]]
harness = false
name = "sim"

[[bench]]
harness = false
name = "value"
