# SPDX-FileCopyrightText: 2022 Kent Gibson <warthog618@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "gpiocdev"
version = "0.7.3"
authors = ["Kent Gibson <warthog618@gmail.com>"]
edition = "2021"
rust-version = "1.68"
description = "Access GPIO lines on Linux using the GPIO character device"
repository = "https://github.com/warthog618/gpiocdev-rs"
license = "Apache-2.0 OR MIT"
keywords = ["chardev", "gpio", "gpiochip", "libgpiod", "linux"]
categories = [
  "api-bindings",
  "asynchronous",
  "embedded",
  "hardware-support",
  "os::linux-apis",
]

[package.metadata.docs.rs]
all-features = true
targets = []

[[example]]
name = "tokio_watch_line_edges"
required-features = ["async_tokio"]

[[example]]
name = "tokio_watch_line_value"
required-features = ["async_tokio"]

[[example]]
name = "tokio_ticking_watch_line_value"
required-features = ["async_tokio"]

[[example]]
name = "async_io_watch_line_value"
required-features = ["async_io"]

[[example]]
name = "async_std_watch_line_value"
required-features = ["async_io"]

[[bench]]
harness = false
name = "event"

[[bench]]
harness = false
name = "reconfigure"

[[bench]]
harness = false
name = "request"

[[bench]]
harness = false
name = "sim"

[[bench]]
harness = false
name = "value"

[dependencies]
async-io = { version = "2.2", optional = true }
futures = { version = "0.3", optional = true }
gpiocdev-uapi = { version = "0.6.3", default-features = false, path = "../uapi" }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
thiserror = "2.0"
tokio = { version = "1.21", features = ["net"], optional = true }
tokio-stream = { version = "0.1.11", optional = true }

[dev-dependencies]
anyhow = "1.0"
async-std = "1"
criterion = "0.7"
gpiosim = "0.4"
tokio = { version = "1.21", features = ["macros", "rt", "time"] }

[features]
async_io = ["dep:async-io", "dep:futures"]
async_tokio = ["dep:futures", "dep:tokio", "dep:tokio-stream"]
default = ["uapi_v2"]
serde = ["dep:serde", "dep:serde_derive"]
uapi_v1 = ["gpiocdev-uapi/uapi_v1"]
uapi_v2 = ["gpiocdev-uapi/uapi_v2"]
