[package]
authors = ["Kent Gibson <warthog618@gmail.com>"]
categories = ["hardware-support", "os::linux-apis", "embedded", "api-bindings"]
description = "A low level library to access GPIO lines on Linux using the GPIO character device"
edition = "2021"
keywords = ["linux", "gpio", "library", "embedded"]
license = "MIT"
name = "gpiocdev-uapi"
repository = "https://github.com/warthog618/gpiocdev-rs"
version = "0.1.1"

[dependencies]
bitflags = "1.3"
bitmaps = {version = "3.2"}
errno = "0.2.8"
libc = "0.2"
nix = "0.25"
thiserror = "1.0"

[features]
default = ["uapi_v2"]
uapi_v1 = []
uapi_v2 = []

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "i686-unknown-linux-gnu"]
