# SPDX-FileCopyrightText: 2022 Kent Gibson <warthog618@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
authors = ["Kent Gibson <warthog618@gmail.com>"]
categories = ["hardware-support", "os::linux-apis", "embedded", "api-bindings"]
description = "A low level library to access GPIO lines on Linux using the GPIO character device"
edition = "2021"
keywords = ["linux", "gpio", "ioctl", "gpiochip", "chardev"]
license = "Apache-2.0 OR MIT"
name = "gpiocdev-uapi"
repository = "https://github.com/warthog618/gpiocdev-rs"
rust-version = "1.62"
version = "0.6.4"

[dependencies]
bitflags = "2.2"
libc = "0.2"
ioctl-sys = "0.8"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"
gpiosim = "0.4"

[features]
default = ["uapi_v2"]
uapi_v1 = []
uapi_v2 = []

[package.metadata.docs.rs]
all-features = true
targets = []

[[bench]]
harness = false
name = "event"

[[bench]]
harness = false
name = "reconfigure"

[[bench]]
harness = false
name = "request"

[[bench]]
harness = false
name = "value"
