# SPDX-FileCopyrightText: 2022 Kent Gibson <warthog618@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "gpiocdev-uapi"
version = "0.6.4"
authors = ["Kent Gibson <warthog618@gmail.com>"]
edition = "2021"
rust-version = "1.68"
description = "A low level library to access GPIO lines on Linux using the GPIO character device"
repository = "https://github.com/warthog618/gpiocdev-rs"
license = "Apache-2.0 OR MIT"
keywords = ["chardev", "gpio", "gpiochip", "ioctl", "linux"]
categories = ["api-bindings", "embedded", "hardware-support", "os::linux-apis"]

[package.metadata.docs.rs]
all-features = true
targets = []

[[bench]]
harness = false
name = "event"

[[bench]]
harness = false
name = "reconfigure"

[[bench]]
harness = false
name = "request"

[[bench]]
harness = false
name = "value"

[dependencies]
bitflags = "2.2"
ioctl-sys = "0.8"
libc = "0.2"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.7"
gpiosim = "0.4"

[features]
default = ["uapi_v2"]
uapi_v1 = []
uapi_v2 = []
